--- a/public/templates/mdrnz/css/custom-datatables.css
+++ b/public/templates/mdrnz/css/custom-datatables.css
@@ -4,6 +4,6 @@
 .dataTables_info {
     margin-bottom: 1.5rem;
 }
-#role-table_wrapper {
-    margin-bottom: 20px;
+.dataTables_wrapper {
+    margin-bottom: 20px !important;
 }
